  command so the user can choose not to notify the enforcer.
* OPENDNSSEC-472: ods-ksmutil: Add option for 'ods-ksmutil key import' to
  check if there is a matching key in the repository before import.
* OPENDNSSEC-473: ods-ksmutil: Improve 'zone add' - Support default <input>
  and <output> values for DNS adapters.


Bugfixes:
* OPENDNSSEC-462: Signer Engine: Duration PT0S is not printed correctly.
* ods-ksmutil: Fix typo in policy export with NSEC3 <Iterations>.


OpenDNSSEC 1.3.15 - 2013-09-19

* SUPPORT-58: Extend ods-signer sign <zone> with --serial <nr> so that the user
  can specify the SOA serial to use in the signed zone [OPENDNSSEC-423].
* OPENDNSSEC-428: Add option for 'ods-ksmutil key generate' to take total 
  number of zones as a parameter
* OPENDNSSEC-448: Signer Engine: Enhancements to signer debug locks.

Bugfixes:
* SUPPORT-75: Signer Engine: Fix double free crash in case of HSM connection
  error during signing [OPENDNSSEC-452].
* OPENDNSSEC-397: Change "hsmutil list" output so that the table header goes 
  to stdout not stderr
* OPENDNSSEC-438: 'ods-ksmutil key generate' and the enforcer can create 
  too many keys for <SharedKeys/> policies when KSK and ZSK use same 
  algorithm and length
* OPENDNSSEC-445: ods-ksmutil: Clean up of hsm connection handling


OpenDNSSEC 1.3.14 - 2013-05-16

* OPENDNSSEC-367: ods-ksmutil: Require user confirmation if the algorithm for
  a key is changed in a policy (as this rollover is not handled cleanly)
* OPENDNSSEC-91: Make the keytype flag required when rolling keys
* OPENDNSSEC-403: Signer Engine: new command 'ods-signer locks' that shows
  locking information (for debugging purposes).

Bugfixes:
* OPENDNSSEC-247: Signer Engine: TTL on NSEC3 was not updated on SOA
  Minimum change.
* OPENDNSSEC-396: Use TTLs from kasp when generating DNSKEY and DS records for
  output.
* OPENDNSSEC-398: The ods-ksmutil key rollover command does not work correctly
  when rolling all keys using the --policy option